# cv

./: .gitignore  API-分工说明.md  CLAUDE.md  CMakeLists.txt  HTTP服务实现总结.md  README.md  RTSP输入支持说明.md  commit_msg.txt  debug-webrtc.html  requirements.txt  temp_yolo.txt  test-frontend.html  test-signaling.js  test-signaling.py  test-sources-api.html  test_api.ps1  test_webrtc_fix.md  tmp_avcodec_modules.txt  webrtc_info.txt  代码结构.md  深度重构计划.txt  设计目标与要点.md
.claude/prompts/: backend_developer.md  frontend_developer.md  software_architect.md  system_analyst.md
config/: app.yaml
config_cpu_test/: app.yaml
docs/: Stage7 尚未完成的任务.md  api_endpoints.md  development_notes.md  model_configuration.md  stage7_route.md  webrtc-jpeg-implementation.md  webrtc-protocol.md  模型分析设计.md  重构路线图.md
ffmpeg-master-shared/ffmpeg-master-latest-win64-gpl-shared/include/libavutil/: ffversion.h
video-analyzer/: CMakeLists.txt
video-analyzer/config/: analyzer_config.json  analyzer_params.yaml  app.yaml  models.yaml  profiles.yaml
video-analyzer/include/: APIController.h  AnalysisAPI.h  ConfigLoader.h  HTTPServer.h  SignalingServer.h  VideoAnalyzer.h  WebRTCStreamer.h  YOLOv12Detector.h
video-analyzer/include/analysis/: Backend.h  Interfaces.h  ModelRegistry.h  OnnxRuntimeBackend.h  PrePost.h  Tasks.h  Tensor.h  Types.h
video-analyzer/include/analysis/detectors/: BaseYoloDetector.h  ConfigurableYoloDetector.h  DetectorBuilder.h
video-analyzer/include/models/: DetectYoloGenericOnnx.h  DetectYoloV12.h  OnnxDetectAdapter.h  OnnxYoloModel.h  YoloDetectAdapter.h
video-analyzer/include/orchestration/: TrackManager.h
video-analyzer/include/pipeline/: DecoderStage.h  Pipeline.h
video-analyzer/src/: AnalysisAPI.cpp  ConfigLoader.cpp  ConfigLoader.hpp  H264Encoder.cpp  HTTPServer.cpp  ModelPaths.cpp  ModelPaths.h  SignalingServer.cpp  VideoAnalyzer.cpp  WebRTCStreamer.cpp  YOLOv12Detector.cpp  composition_root.cpp  composition_root.hpp  main.cpp  test_video_generator.cpp
video-analyzer/src/analysis/: ModelRegistry.cpp  OnnxRuntimeBackend.cpp  PrePost.cpp
video-analyzer/src/analysis/detectors/: BaseYoloDetector.cpp  ConfigurableYoloDetector.cpp  DetectorBuilder.cpp
video-analyzer/src/analyzer/: analyzer.cpp  analyzer.hpp  interfaces.hpp  ort_session.cpp  ort_session.hpp  postproc_detr.cpp  postproc_detr.hpp  postproc_yolo_det.cpp  postproc_yolo_det.hpp  postproc_yolo_seg.cpp  postproc_yolo_seg.hpp  preproc_letterbox_cpu.cpp  preproc_letterbox_cpu.hpp  preproc_letterbox_cuda.cpp  preproc_letterbox_cuda.hpp  renderer_passthrough.cpp  renderer_passthrough.hpp
video-analyzer/src/app/: application.cpp  application.hpp
video-analyzer/src/core/: engine_manager.cpp  engine_manager.hpp  factories.hpp  logger.cpp  logger.hpp  pipeline.cpp  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp  track_manager.cpp  track_manager.hpp  utils.hpp
video-analyzer/src/media/: encoder.hpp  encoder_h264_ffmpeg.cpp  encoder_h264_ffmpeg.hpp  source.hpp  source_switchable_rtsp.cpp  source_switchable_rtsp.hpp  transport.hpp  transport_webrtc_datachannel.cpp  transport_webrtc_datachannel.hpp  transport_whip.cpp  transport_whip.hpp
video-analyzer/src/models/: DetectYoloGenericOnnx.cpp  DetectYoloV12.cpp  OnnxDetectAdapter.cpp  OnnxYoloModel.cpp  YoloDetectAdapter.cpp
video-analyzer/src/orchestration/: TrackManager.cpp
video-analyzer/src/pipeline/: DecoderStage.cpp  Pipeline.cpp
video-analyzer/src/server/: rest.cpp  rest.hpp
video-analyzer/test/scripts/: analyze_detection_log.py  check_analysis_api.py  check_gpu_inference.py  check_subscription_flow.py
video-source-manager/: CMakeLists.txt
video-source-manager/config/: video_sources.json
video-source-manager/include/: HTTPServer.h  RTSPInputHandler.h  RTSPStreamer.h  SourceAPI.h  VideoSourceManager.h
video-source-manager/src/: HTTPServer.cpp  RTSPInputHandler.cpp  RTSPStreamer.cpp  SourceAPI.cpp  VideoSourceManager.cpp  main.cpp  simple_main.cpp  test_main.cpp
web-frontend/: .eslintrc.cjs  WEBRTC_TEST.md  index.html  package-lock.json  package.json  test-webrtc.html  tsconfig.tsbuildinfo  vite.config.ts
web-frontend/src/: App-simple.vue  App.vue  main.d.ts  main.js  main.ts
web-frontend/src/components/: JpegVideoPlayer.vue  VideoAnalysisControl.vue
web-frontend/src/router/: index.js  index.ts
web-frontend/src/stores/: analysisStore.d.ts  analysisStore.js  analysisStore.ts  appStore.d.ts  appStore.js  appStore.ts  videoSourceStore.d.ts  videoSourceStore.js  videoSourceStore.ts  videoStore.ts
web-frontend/src/types/: index.d.ts  index.ts
web-frontend/src/utils/: webrtc.ts
web-frontend/src/views/: AnalysisResults.vue  JpegVideoTest.vue  Settings.vue  VideoAnalysis.vue  VideoSourceManager.vue  VideoStreams.vue
